<resources>
    <string name="app_name">NY Times</string>

    <string name="intro_head_text">Welcome!</string>
    <string name="intro_subhead_text">Learn topstories about the World!</string>
    <string name="intro_btn_text">FINISH!</string>

    <string name="enter_hint">Enter a message</string>
    <string name="button_text">SEND MESSAGE</string>

    <string name="email_error">Can\'t find Email app</string>
    <string name="browser_error">Can\'t open a link</string>

    <string name="app_title">NY Times</string>
    <string name="char1">NRNU MEPhI student</string>
    <string name="char2">Mason... a little bit</string>
    <string name="description">I like coffee! For this moment there is a 1 liter of this perfect gods\' drink inside of me.
        Coffee was yummy, but it\'s not enough. And, unfortunately, it cannot add at least 1 hour to 24 ones.
        So, now I\'m going to buy a liter more and continue writing a code.\n
        E = mc^2\n
        Energy = milk * coffee * coffee</string>
    <string name="signature">“© 2019 Anastasia”</string>

    <string name="very_big_text">One night there was a woman at the airport who had to wait for several hours before catching her next flight. While she waited she bought a book and a pack of biscuits to spend the time. She looked for a place to sit and waited. She was deep into her book, when suddenly she realized that there was a young man sitting next to her who was stretching his hand, with no concern whatsoever, and grabbing the pack of cookies lying between them. He started to eat them one by one. Not wanting to make a fuss about it she decided to ignore him.

The woman, slightly bothered, ate the cookies and watched the clock, while the young and shameless thief of biscuits was also finishing them. The woman started to get really angry at this point and thought, «If I wasn’t such a good and educated person, I would have given this daring man a black eye by now.» Every time she ate a biscuit, he had one too. The dialogue between their eyes continued and when only one biscuit was left, she wondered what was he going to do. Softly and with a nervous smile, the young man grabbed the last biscuit and broke it in two. He offered one half to the woman while he ate the other half. Briskly she took the biscuit and thought, «What an insolent man! How uneducated! He didn’t even thank me!»

She had never met anybody so fresh and sighed relieved to hear her flight announced. She grabbed her bags and went towards the boarding gate refusing to look back to where that insolent thief was seated. After boarding the plane and nicely seated, she looked for her book which was nearly finished by now. While looking into her bag she was totally surprised to find her pack of biscuits nearly intact. If my biscuits are here, she thought feeling terribly, those others were his and he tried to share them with me. Too late to apologize to the young man, she realized with pain, that it was her who had been insolent, uneducated and a thief, and not him!</string>

    <string name="error_spinner_null">Please, choose category!</string>

    <string name="error_empty_data_text">Data not found</string>
    <string name="error_server_text">Server error</string>
    <string name="error_network_text">Error! Please check your network connection and try again</string>
    <string name="button_try_again_text">Retry</string>
</resources>
