<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:padding="8dp"
    tools:context=".IntroActivity">

    <RelativeLayout
        android:id="@+id/intro_internal_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/intro_button"
        android:layout_centerInParent="true">

        <ImageView
            android:id="@+id/intro_imageview"
            android:layout_width="@dimen/img_width_height"
            android:layout_height="@dimen/img_width_height"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"

            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"

            app:srcCompat="@drawable/screenshot_ny_times"

            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/intro_textview1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"

            android:layout_below="@id/intro_imageview"
            android:layout_centerHorizontal="true"

            android:text="@string/intro_head_text"
            android:textColor="@android:color/background_light"
            android:textSize="@dimen/intro_head_text_size"
            android:textAlignment="center"
            />

        <TextView
            android:id="@+id/intro_textview2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"

            android:layout_below="@id/intro_textview1"
            android:layout_centerHorizontal="true"

            android:text="@string/intro_subhead_text"
            android:textColor="@android:color/background_light"
            android:textSize="@dimen/intro_subhead_text_size"
            android:textAlignment="center"
            />
    </RelativeLayout>

    <Button
        android:id="@+id/intro_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"


        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"

        android:background="@android:color/transparent"
        android:text="@string/intro_btn_text"
        android:textColor="#FFFFFF"
        android:textSize="@dimen/text_size"
        tools:layout_editor_absoluteX="307dp"
        tools:layout_editor_absoluteY="594dp"
        />


</RelativeLayout>