<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="0dp"
    tools:context=".AboutActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="0dp"
        android:padding="8dp">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/mainLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:padding="0dp"
                android:scrollbarAlwaysDrawVerticalTrack="false"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="0.666"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="0dp"
                    android:layout_height="282dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:maxHeight="500dp"
                    android:scaleType="centerCrop"
                    tools:ignore="ContentDescription"
                    app:layout_constraintBottom_toTopOf="@+id/textView2"
                    app:layout_constraintHorizontal_bias="0.492"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/avatar" />


                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="@dimen/pic_size"
                    android:layout_height="wrap_content"

                    android:layout_marginStart="50dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"

                    tools:ignore="ContentDescription"
                    app:layout_constraintBottom_toTopOf="@+id/imageView3"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toLeftOf="@+id/textView2"
                    app:layout_constraintTop_toBottomOf="@+id/imageView"
                    app:srcCompat="@drawable/ic_atom" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/pic_size"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/char1"
                    android:textSize="@dimen/text_size"
                    app:layout_constraintBottom_toTopOf="@+id/textView3"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintLeft_toRightOf="@+id/imageView2"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageView" />


                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="@dimen/pic_size"
                    android:layout_height="@dimen/pic_size"

                    android:layout_marginStart="50dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"

                    tools:ignore="ContentDescription"
                    app:layout_constraintBottom_toTopOf="@+id/textView"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toLeftOf="@+id/textView3"
                    app:layout_constraintTop_toBottomOf="@+id/imageView2"
                    app:srcCompat="@drawable/ic_triangle" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/pic_size"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/char2"
                    android:textSize="@dimen/text_size"
                    app:layout_constraintBottom_toTopOf="@+id/textView"
                    app:layout_constraintLeft_toRightOf="@+id/imageView3"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView2" />


                <TextView
                    android:id="@+id/textView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:maxHeight="150dp"
                    app:layout_constraintBottom_toTopOf="@+id/editText3"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView3" />

                <EditText
                    android:id="@+id/editText3"
                    android:layout_width="0dp"
                    android:layout_height="43dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    tools:ignore="Autofill"
                    android:ems="10"
                    android:hint="@string/enter_hint"
                    android:inputType="text"
                    android:textSize="@dimen/text_size"
                    app:layout_constraintBottom_toTopOf="@+id/button"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView" />

                <Button
                    android:id="@+id/button"
                    android:layout_width="139dp"
                    android:layout_height="48dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:background="@android:color/transparent"
                    android:text="@string/button_text"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="@dimen/text_size"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/editText3" />


                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"

                    tools:ignore="ContentDescription"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintHorizontal_chainStyle="packed"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toLeftOf="@+id/imageView5"
                    app:layout_constraintTop_toBottomOf="@+id/button"
                    app:srcCompat="@drawable/ic_vk_box" />

                <ImageView
                    android:id="@+id/imageView5"
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"

                    tools:ignore="ContentDescription"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintLeft_toRightOf="@+id/imageView4"
                    app:layout_constraintRight_toLeftOf="@+id/imageView6"
                    app:layout_constraintTop_toBottomOf="@+id/button"
                    app:srcCompat="@drawable/ic_github_box" />


                <ImageView
                    android:id="@+id/imageView6"
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"

                    tools:ignore="ContentDescription"
                    android:background="@drawable/gradient"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintLeft_toRightOf="@+id/imageView5"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/button"
                    app:srcCompat="@drawable/ic_instagram" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>

